# ocpi

./: pyproject.toml
py_ocpi/core/: config.py  data_types.py  endpoints.py  enums.py  push.py
py_ocpi/modules/cdrs/v_2_2_1/: schemas.py
py_ocpi/modules/commands/v_2_2_1/: schemas.py
py_ocpi/modules/commands/v_2_2_1/api/: cpo.py
py_ocpi/modules/credentials/v_2_2_1/: schemas.py
py_ocpi/modules/credentials/v_2_2_1/api/: cpo.py  emsp.py
py_ocpi/modules/locations/v_2_2_1/: schemas.py
py_ocpi/modules/locations/v_2_2_1/api/: cpo.py  emsp.py
py_ocpi/modules/sessions/v_2_2_1/: schemas.py
py_ocpi/modules/sessions/v_2_2_1/api/: emsp.py
py_ocpi/modules/versions/api/: v_2_2_1.py
tests/test_modules/: test_credentials.py  test_locations.py  test_sessions.py
